--- a/src/styles/pages/home/_reviews.scss
+++ b/src/styles/pages/home/_reviews.scss
@@ -32,6 +32,11 @@
     padding: 1rem;
     gap: 1rem;
   }
+
+  @media (max-width: 420px) {
+    gap: 0.5rem;
+    padding: 0.75rem;
+  }
 }
 
 .review-item {
@@ -50,103 +55,129 @@
     max-width: 320px; // límite para que no se estiren demasiado
   }
 
-  &:hover {
-    transform: translateY(-4px);
-  }
+  @media (max-width: 420px) {
+    flex: 1 1 calc(50% - 0.75rem);
+    /* dos columnas */
+    max-width: calc(50% - 0.75rem);
+    font-size: 0.7rem;
 
-  &__image {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-
-    @media (max-width: 768px) {
-      height: 170px;
+    .review-item__image {
+      height: 110px;
+      /* imagen más baja */
     }
 
-    img {
+    .review-item__comment {
+      font-size: 0.655rem;
+    }
+
+    .review-item__footer {
+      font-size: 0.65rem;
+    }
+  }
+
+    &:hover {
+      transform: translateY(-4px);
+    }
+
+    &__image {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-  }
+      height: 200px;
+      overflow: hidden;
 
-  &__content {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-  }
+      @media (max-width: 768px) {
+        height: 170px;
+      }
 
-  &__stars {
-    display: flex;
-    gap: 0.25rem;
-
-    .star {
-      width: 20px;
-      height: 20px;
-      color: #d1d5db;
-
-      &.active {
-        color: #fbbf24;
-        fill: #fbbf24;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
       }
     }
-  }
 
-  &__comment {
-    font-size: 1rem;
-    font-style: italic;
-    color: #374151;
-    line-height: 1.5;
+    &__content {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
 
-    @media (max-width: 768px) {
-      font-size: 0.85rem;
+      @media (max-width: 420px) {
+      padding: 0.5rem;
+      gap: 0.5rem;
+      
+      }
     }
 
-    @media (max-width: 480px) {
-      font-size: 0.8rem;
-    }
-  }
+    &__stars {
+      display: flex;
+      gap: 0.25rem;
 
-  &__footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.85rem;
-    color: #6b7280;
+      .star {
+        width: 20px;
+        height: 20px;
+        color: #d1d5db;
 
-    @media (max-width: 480px) {
-      font-size: 0.8rem;
-    }
-
-    .name {
-      font-weight: 600;
-      color: #111827;
+        &.active {
+          color: #fbbf24;
+          fill: #fbbf24;
+        }
+      }
     }
 
-    .date {
+    &__comment {
+      font-size: 1rem;
       font-style: italic;
+      color: #374151;
+      line-height: 1.5;
+
+      @media (max-width: 768px) {
+        font-size: 0.85rem;
+      }
+
+      @media (max-width: 480px) {
+        font-size: 0.8rem;
+      }
     }
 
+    &__footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 0.85rem;
+      color: #6b7280;
+
+      @media (max-width: 480px) {
+        font-size: 0.8rem;
+      }
+
+      .name {
+        font-weight: 600;
+        color: #111827;
+      }
+
+      .date {
+        font-style: italic;
+      }
+
+
+    }
+  }
+
+  .star-title {
+    width: 20px;
+    height: 20px;
+    color: #fbbf24;
+    fill: #fbbf24;
+  }
+
+
+  .review-subtitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 500;
 
   }
-}
-
-.star-title {
-     width: 20px;
-      height: 20px;
-      color: #fbbf24;
-        fill: #fbbf24;
-}
-    
-
-.review-subtitle{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  font-size: 1.1rem;
-  font-weight: 500;
-
-}
