--- a/src/styles/pages/home/_reviews.scss
+++ b/src/styles/pages/home/_reviews.scss
@@ -112,11 +112,19 @@
     &__stars {
       display: flex;
       gap: 0.25rem;
+      @media (max-width: 420px) {
+      gap: 0.15rem;     
+      }
 
       .star {
         width: 20px;
         height: 20px;
         color: #d1d5db;
+
+          @media (max-width: 420px) {
+            width: 12px;
+            height: 12px;
+          }
 
         &.active {
           color: #fbbf24;
